--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,12 @@ owner: evolvepune # Your GitHub organization or username, where this repository 
 repo: website-status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Evolve Pune
+    url: https://www.evolvepune.com
+  - name: Courses - Evolve Pune
+    url: https://www.evolvepune.com
+  - name: Iskcon Hinjewadi
+    url: https://iskconhinjewadi.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
