--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,5 @@
-# Change these first
-owner: evolvepune # Your GitHub organization or username, where this repository lives
-repo: website-status # The name of this repository
+owner: evolvepune
+repo: website-status
 
 sites:
   - name: Evolve Pune
@@ -11,13 +10,11 @@ sites:
     url: https://iskconhinjewadi.com/
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /website-status
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://raw.githubusercontent.com/evolvepune/website-status/master/assets/tlogo.png
+  name: Evolve Pune IT
+  introTitle: "This is a status page for all Evolve Pune web projects."
+  introMessage: This page is generated through **upptime** [GitHub repository](https://github.com/upptime/upptime).
   navbar:
     - title: Status
       href: /
