--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ sites:
   - name: Evolve Pune
     url: https://www.evolvepune.com
   - name: Courses - Evolve Pune
-    url: https://www.evolvepune.com
+    url: https://courses.evolvepune.com/courses/
   - name: Iskcon Hinjewadi
     url: https://iskconhinjewadi.com/
 
