Change ep url to remove www

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,7 @@ assignees:
 
 sites:
   - name: Evolve Pune
-    url: https://www.evolvepune.com
+    url: https://evolvepune.com
   - name: Courses - Evolve Pune
     url: https://courses.evolvepune.com/courses/
   - name: Iskcon Hinjewadi
