--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,7 +9,7 @@ sites:
   - name: Evolve Pune
     url: https://evolvepune.com
   - name: Courses - Evolve Pune
-    url: https://courses.evolvepune.com/courses/
+    url: https://courses.evolvepune.com/learn/
   - name: Iskcon Hinjewadi
     url: https://iskconhinjewadi.com/
 
